--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,28 @@
-{"dependencies":{"cookie-parser":"^1.4.6","cors":"^2.8.5","dotenv":"^16.0.3","ejs":"^3.1.8","express":"^4.18.2","express-session":"^1.17.3","passport":"^0.6.0","passport-local":"^1.0.0","pdf-lib":"^1.17.1","sweetalert":"^2.1.2"},"name":"server","version":"1.0.0","description":"","main":"server.js","scripts":{"devStart":"nodemon server.js"},"keywords":[],"author":"","license":"ISC","devDependencies":{"nodemon":"^2.0.20"}}
+{
+  "dependencies": {
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pdf-lib": "^1.17.1",
+    "sweetalert": "^2.1.2"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "devStart": "nodemon server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
+}
